# slicsuperpixel

./: .gitignore  CMakeLists.txt  Makefile  README.md  groundtruth  groundtruth.cpp  main.cpp  slic.cpp  slic.h  slicsvmvalidator  slicsvmvalidator.cpp  superpixel.h  svmtrain.cpp  timer.cpp
