cmake_minimum_required(VERSION 2.8)
project( slic )
find_package( OpenCV REQUIRED )
add_executable( slic main.cpp slic.cpp timer.cpp )
target_link_libraries( slic ${OpenCV_LIBS} )
add_executable( svmtrain svmtrain.cpp )
target_link_libraries( svmtrain ${OpenCV_LIBS} )
add_executable( slicsvmvalidator slicsvmvalidator.cpp slic.cpp timer.cpp )
target_link_libraries( slicsvmvalidator ${OpenCV_LIBS} )